--- a/HW3_new.Rmd
+++ b/HW3_new.Rmd
@@ -62,18 +62,21 @@ A table shows the mean of hour:
 instacart_mean =
   instacart %>% 
   drop_na() %>% 
+  distinct() %>% 
   select(product_name,order_dow,order_hour_of_day) %>% 
   filter(product_name %in% c("Pink Lady Apples","Coffee Ice Cream")) 
 instacart_mean =
   instacart_mean %>% 
-  group_by(order_dow) %>% 
+   mutate(
+  order_dow = recode(order_dow, '0' = "Sunday",'1' = "Monday",'2' = "Tuesday",'3' = "Wednesday", '4' = "Thursday", '5' =    "Friday", '6' = "Saturday")
+ ) %>% 
+  group_by(order_dow, product_name) %>% 
   summarize(
-    mean_order_hour_of_day = mean(order_hour_of_day)) %>% 
-  mutate(
-    order_dow = recode(order_dow, '0' = "Sunday",'1' = "Monday",'2' = "Tuesday",'3' = "Wednesday", '4' = "Thursday", '5' = "Friday", '6' = "Saturday")
-  )
-  
-view(instacart_mean)
+    mean_order_hour_of_day = mean(order_hour_of_day)) %>%
+  pivot_wider(names_from = order_dow,
+              values_from = mean_order_hour_of_day) %>% 
+  select(product_name, Sunday, Monday, Tuesday, Wednesday, Thursday, Friday, Saturday)
+knitr :: kable(instacart_mean)
   
   
 ```
@@ -94,7 +97,7 @@ brfss =
      response = forcats::fct_relevel(response, c("Poor","Fair","Good","Very good","Excellent"))) #responses as a factor taking levels orders
 
 ```
-For 2002, there are three states were observed at 7 or more locations. They were MA,NJ, and PA.
+For 2002, there are six states were observed at 7 or more locations. They were CT, FL, MA, NC, NJ,and PA.
 ```{r}
 brfss_2002= 
   brfss %>%
@@ -105,11 +108,11 @@ brfss_2002=
   mutate(
     number_of_location = number_of_location/5
   ) %>% 
-  filter(number_of_location > 7)
+  filter(number_of_location > 6)
 brfss_2002
 
 ```
-For 2010, there is a significant increase in the number of locations that satisfy our requirements. Specifically, 11 states are obseved at 7 or more locations.
+For 2010, there is a significant increase in the number of locations that satisfy our requirements. Specifically, 14 states are obseved at 7 or more locations.
 ```{r}
 brfss_2010= 
   brfss %>%
@@ -120,7 +123,7 @@ brfss_2010=
   mutate(
     number_of_location = number_of_location/5
   ) %>% 
-  filter(number_of_location > 7)
+  filter(number_of_location > 6)
 brfss_2010
 ```
 ```{r}
@@ -155,6 +158,29 @@ Two %>%
   group_by(year,locationdesc,locationabbr) %>% 
   ggplot(aes(x = response, y = data_value, fill = locationdesc)) + 
   geom_bar(stat = "identity", position = "dodge") +
-  facet_grid(year ~ .)
+  facet_grid(year ~ .) +
+  labs(
+    title = "Distribution for Responses among locations in NY",
+    x = "Response",
+    y = "Count of Data Value"
+  )
 ```
-My graph
+This graoh has an emphases on different locations among New York States. I did another graph only showing the distribution across New York City. This one utilizes a violin plot. I think here, geom_violin gives a better idea of how distribution looks than boxplot does.
+
+```{r}
+Two %>% 
+  group_by(year,locationdesc,locationabbr) %>% 
+  ggplot(aes(x = response, y = data_value)) + 
+  geom_violin() +
+  facet_grid(year ~ locationabbr) +
+  labs(
+    title = "Distribution for Responses in NY",
+    x = "Response",
+    y = "Count of Data Value"
+  )
+```
+### Problem 3
+```{r}
+
+```
+
